2001-11-08  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: set debug level 4 for `550 No files found' reply;
	  send QUIT from destructor.
	* buffer.cc: optimize Format method, vsnprintf directly to buffer.

2001-11-08  Glenn Maynard <g_ld@zewt.org>

	* FileSet.cc, FileSet.h: Added a pattern-exclude() for FileSets.
	* Fish.h, Http.h, log.h: no need for StatusLine.
	* StatusLine.cc: StatusLine doesn't update for the first 20ms.
	* buffer.cc, buffer.h: Added Buffer::Format().

2001-11-06  Alexander V. Lukyanov <lav@yars.free.net>

	* PtyShell.cc: include sys/types.h and sys/ioctl.h.
	* TimeDate.cc, TimeDate.h, Timer.cc, Timer.h: new files.
	* CopyJob.cc, CopyJob.h, FileCopy.cc, FileCopy.h, Fish.cc,
	  FtpListInfo.cc, Http.cc, HttpDir.cc, NetAccess.cc,
	  NetAccess.h, Resolver.cc, SMTask.cc, SMTask.h, SleepJob.cc,
	  Speedometer.cc, Speedometer.h, StatusLine.cc, StatusLine.h,
	  complete.cc, ftpclass.cc, misc.cc, misc.h: use new time classes.
	* commands.cc: (builtin_lcd) don't assume cwd!=0.
	* FtpDirList.cc: (EPLF) use TimeDate::IsoDateTime; add missing \n.

2001-11-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.h: fix coredump on `mget -E'.
	* complete.cc, parsecmd.cc: accept single quote as well as double
	  quote, no difference between the two yet.

2001-10-30  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: no need to convert cached data - it is done by other
	  copy peer; don't translate really debugging messages.
	* misc.cc: no need for crlf_to_lf.
	* complete.cc: don't show completion status right after the tab since
	  the listing can come from cache fast.

2001-10-29  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: use dynamic allocation in set_tz; use unsetenv to unset TZ;
	  implement unsetenv is not available using environ array.
	* ColumnOutput.cc: make it compile with irix compiler.

2001-10-27  Alexander V. Lukyanov <lav@yars.free.net>

	* FtpDirList.cc: clean up; style.